[tool.poetry]
name = "easy-notion"
version = "0.1.0"
description = "Unofficial Python API client for Notion"
authors = ["hans97a <byby8992@naver.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
wheel = "^0.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
