[tool.poetry]
name = "easy-notion-api"
version = "0.1.0"
description = "Unofficial Python API client for Notion"
authors = ["hans97a <byby8992@naver.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
wheel = "^0.43.0"
setuptools = "^69.5.1"
twine = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"